--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Construção de Rodovia R</h5>
+                    <h5 class="modal-title">Construção de Rodovia Dom Pedro</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Este projeto envolveu a construção de uma rodovia de 50 km, projetada para garantir a segurança de motoristas e pedestres, minimizando o impacto ambiental através de soluções sustentáveis.</p>
+                    <p>Este projeto envolveu a construção de uma rodovia de 145 km, projetada para garantir a segurança de motoristas e pedestres, minimizando o impacto ambiental através de soluções sustentáveis.</p>
                     <img src="img/projeto-1.png" class="img-fluid w-100" alt="Imagem do projeto de rodovia">
                 </div>
                 <div class="modal-footer">
@@ -78,11 +78,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Ponte sobre o Rio Y</h5>
+                    <h5 class="modal-title">Ponte sobre o Rio Piracicaba</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Este projeto envolveu a construção de uma ponte de 200 metros sobre o Rio Y, com foco em segurança estrutural e soluções técnicas para áreas com grande tráfego de veículos pesados.</p>
+                    <p>Este projeto envolveu a construção de uma ponte de 200 metros sobre o Rio Piracicaba, com foco em segurança estrutural e soluções técnicas para áreas com grande tráfego de veículos pesados.</p>
                     <img src="img/projeto-2.png" class="img-fluid w-100" alt="Imagem do projeto de ponte">
                 </div>
                 <div class="modal-footer">
@@ -97,11 +97,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Urbanização do Parque Z</h5>
+                    <h5 class="modal-title">Urbanização do Parque Ibirapura</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Projeto de urbanização e revitalização do Parque Z, com foco na melhoria da acessibilidade e inclusão de soluções ecológicas para promover o bem-estar social e ambiental.</p>
+                    <p>Projeto de urbanização e revitalização do Parque Ibirapuera, com foco na melhoria da acessibilidade e inclusão de soluções ecológicas para promover o bem-estar social e ambiental.</p>
                     <img src="img/projeto-3.png" class="img-fluid w-100" alt="Imagem do projeto de urbanização">
                 </div>
                 <div class="modal-footer">
